[map] Fix image size overflow in custom content tooltips

--- a/src/components/discovery-map/discovery-map.scss
+++ b/src/components/discovery-map/discovery-map.scss
@@ -31,5 +31,8 @@
 
   .leaflet-popup-content-wrapper {
     overflow-wrap: anywhere;
+    img {
+      max-width: 100%;
+    }
   }
 }
